--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.17.2",
     "chart.js": "^2.6.0",
+    "cors": "^2.8.4",
     "crypto-js": "^3.1.9-1",
     "dotenv": "^4.0.0",
     "express": "^4.15.3",
